# sem03-diff-eq-lab-001

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: generate.py
src/: approx_methods.py  defs.py  main.py
